style.css
:root {
	font-family:
		'ヒラギノ丸ゴ ProN W4',
		'Arial Rounded MT Bold',
		ui-rounded,
		'Helvetica Neue',
		Helvetica,
		Arial,
		'ヒラギノ角ゴ Pro W4',
		'Hiragino Kaku Gothic Pro',
		'メイリオ',
		'Meiryo',
		sans-serif;
	background-color: var(--background-color);
	color: var(--color);
	--background-color: #FFF;
	--color: #000;
	--border-color: #000;
	--footer-color: #777;
	--active-filter-background-color: #0FF;
	--active-filter-border-color: #008080;
	--disabled-button-color: #6d6d6d;
	--disabled-button-background-color: #c0c0c0;
	--translucent-background-color: #FFF4;
	--margin-unit: 8px;
	--border-width: 1px;
	--hamburger-length: 50px;
	--drawer-width: 100vw;
	--event-width: 280px;
	--social-icon-length: 30px;
}

@supports not ((backdrop-filter: blur(5px)) or (-webkit-backdrop-filter: blur(5px))) {
	:root {
		--translucent-background-color: #FFFC;
	}
}

@media (prefers-contrast: more) {
	:root {
		--footer-color: #444;
		--disabled-button-color: #000;
	}
}

@media (prefers-color-scheme: dark) {
	:root {
		--background-color: #000;
		--color: #FFF;
		--border-color: #2F3336;
		--footer-color: #888;
		/* --active-filter-background-color: TODO; */
		/* --active-filter-border-color: TODO; */
		--disabled-button-color: #c0c0c0;
		--disabled-button-background-color: #404040;
		--translucent-background-color: #0004;
	}

	@supports not ((backdrop-filter: blur(5px)) or (-webkit-backdrop-filter: blur(5px))) {
		:root {
			--translucent-background-color: #000C;
		}
	}

	a {
		color: #0FF;
	}

	@media (prefers-contrast: more) {
		:root {
			--border-color: #FFF;
			--footer-color: #BBB;
		}
	}
}

/* Same font as the header of KemoV's official website. */
@font-face {
	font-family: NikumaruFontEn;
	src:
		local('07にくまるフォント'),
		url('NikumaruFont.en.woff2') format('woff2');
}

@font-face {
	font-family: NikumaruFontJa;
	src:
		local('07にくまるフォント'),
		url('NikumaruFont.ja.woff2') format('woff2');
}

[hidden] {
	display: none !important;
}

body {
	margin: 0;
}

/* We are going to use the elements for semantics, so reset the default styles. */
h1, h2, h3, h4, h5, h6 {
	font-size: initial;
	margin: initial;
}

p {
	margin: initial;
}

ul, menu {
	margin: initial;
	padding: initial;
}

li {
	display: block;
	padding: initial;
}

button {
	appearance: none;
	border: none;
	color: inherit;
	background: inherit;
	font-family: inherit;
}

body > header {
	height: var(--hamburger-length);
	border-top: solid var(--border-width) var(--border-color);
	border-bottom: solid var(--border-width) var(--border-color);
}

body > header > h1 {
	text-align: center;
}

hr {
	border: none;
	border-top: solid var(--border-width) var(--border-color);
}

/* `<input>` is difficult to style, so hide it and style the preceding `<label>` instead. */
.hamburger-checkbox, .filter-checkbox {
	display: none;
}

.title-heading:lang(en) {
	font-family: NikumaruFontEn, sans-serif;
}

.lang-confirmed .title-heading:lang(ja) {
	font-family: NikumaruFontJa, sans-serif;
}

/* Drawer widget */

.hamburger-label {
	position: fixed;
	z-index: 3; /* Put it above `.drawer-container`. */
	width: var(--hamburger-length);
	height: var(--hamburger-length);
	border: var(--border-width) solid var(--border-color);
	cursor: pointer;
	background-color: var(--background-color);
	stroke: var(--color);
}

.hamburger-label.filter-active {
	background-color: var(--active-filter-background-color);
}

.hamburger-checkbox:checked ~ .hamburger-label {
	position: fixed;
}

@media print {
	.hamburger-label {
		visibility: hidden;
	}
}

.drawer-container {
	position: fixed;
	z-index: 2; /* Put it above the main content and `.date-heading`. */
	top: 0;
	border-right: solid var(--border-width) var(--border-color);
	width: var(--drawer-width);
	height: 100vh;
	/* XXX: On desktop, the user agent may _always_ render the scroll bar, covering a portion of the
	 * drawer content when it is collapsed. */
	overflow-y: scroll;
	/* Hide the drawer visually, but not from screen readers, since the whole point of a drawer
	 * widget is to save display space, which is irrelevant to screen reader users. */
	left: calc(-1 * var(--drawer-width) - var(--border-width) - 2 * var(--margin-unit));
	transition: left .3s;
	/* XXX: Should we include `user-select: none` here? That would improve experience for
	 * sighted users a bit, but might be confusing for screen reader users. */
}

.hamburger-checkbox:checked ~ .drawer-container, .drawer-container:focus-within {
	left: 0;
}

@media (prefers-reduced-motion) {
	/* Use a dissolving animation. */
	/* XXX: This causes a discontinuity as `z-index` crosses `0`. */
	.drawer-container {
		left: 0;
		z-index: -2;
		opacity: 0;
		transition-property: z-index,opacity;
	}

	.hamburger-checkbox:checked ~ .drawer-container, .drawer-container:focus-within {
		z-index: 2;
		opacity: 1;
	}
}

.drawer {
	display: grid;
	padding-top: var(--hamburger-length);
	width: var(--drawer-width);
	background-color: var(--background-color);
}

.drawer > menu > li, .filter-item {
	margin-top: var(--margin-unit);
	margin-bottom: var(--margin-unit);
}

.icon {
	stroke-linecap: round;
}

.drawer-labeled-button {
	display: grid;
	padding: 0;
	height: var(--hamburger-length);
	text-align: left;
	font-size: inherit;
}

.drawer-labeled-button > img, .drawer-labeled-button > svg {
	grid-column: 1;
	width: var(--hamburger-length);
	height: var(--hamburger-length);
}

.drawer-labeled-button > p {
	grid-column: 2;
	overflow: hidden;
	white-space: nowrap;
	text-overflow: ellipsis;
}

.filter-clear-button {
	appearance: none;
	cursor: pointer;
	fill: var(--active-filter-background-color);
	stroke: currentColor;
}

.filter-clear-button:disabled {
	cursor: default;
	fill: var(--disabled-button-background-color);
	stroke: var(--disabled-button-color);
}

.filter-clear-button:disabled > p {
	opacity: .2;
}

.search-label > svg {
	cursor: pointer;
	width: var(--hamburger-length);
	height: var(--hamburger-length);
	fill: var(--background-color);
	stroke: currentColor;
}

.search-label > input {
	margin-left: var(--margin-unit);
}

.filter-button:not(:disabled) {
	cursor: pointer;
}

.filter-button[aria-checked="false"], .filter-button:disabled {
	opacity: .2;
}

.drawer > footer {
	align-self: end;
	border-top: solid var(--border-width) var(--border-color);
	padding-top: var(--margin-unit);
	padding-left: calc((var(--hamburger-length) - var(--social-icon-length)) / 2);
	text-align: left;
}

.date-heading {
	position: sticky;
	z-index: 1; /* Put it above `.event-thumbnail-container`. */
	top: 0;
	left: var(--drawer-width);
	width: 100%;
	text-align: center;
	background-color: var(--background-color);
	border-bottom: solid var(--border-width) var(--border-color);
	break-after: avoid-page;
}

.now-separator {
	margin-top: var(--margin-unit);
	margin-bottom: var(--margin-unit);
	border-top: solid var(--border-width) var(--border-color);
	border-bottom: solid var(--border-width) var(--border-color);
	text-align: center;
}

/* Animate the time separator to indicate that the time is dynamically updated. */
.now-separator .time-separator {
	animation: 2s flash infinite;
}

@keyframes flash {
	from {
		visibility: visible;
	}
	50% {
		visibility: hidden;
	}
	to {
		visibility: hidden;
	}
}

@media (prefers-reduced-motion) {
	.now-separator .time-separator {
		animation: none;
	}
}

.event {
	display: inline-grid;
	width: calc(100% - 2 * var(--margin-unit));
	margin: 0;
	margin-top: calc(-1 * var(--border-width));
	border: solid var(--border-width) var(--border-color);
	border-left: none;
	border-right: none;
	padding: var(--margin-unit);
	break-inside: avoid;
}

.event > * {
	/* FIXME: The elements still do not extend to the second column. */
	grid-column: 1/2;
}

.event-time {
	grid-column: 1;
}

.event-header-grid {
	display: grid;
}

.event-thumbnail-container {
	position: relative;
	height: calc((var(--event-width) - 2 * var(--margin-unit)) * 9 / 16);
	order: -1;
}

.event-thumbnail {
	display: block;
	width: 100%;
}

.event-duration {
	position: absolute;
	right: 0;
	bottom: 0;
	border-top-left-radius: 5px;
	padding-left: calc(var(--margin-unit) / 2);
	background-color: var(--translucent-background-color);
	backdrop-filter: blur(5px);
	-webkit-backdrop-filter: blur(5px);
	color: var(--color);
}

.duration {
	position: absolute;
	right: 0;
	bottom: 0;
}

.event-members {
	margin-top: var(--margin-unit);
	overflow-x: scroll;
	white-space: nowrap;
}

.event-member {
	display: inline-block;
	margin-left: var(--margin-unit);
}

.event-member:first-child {
	margin-left: 0;
}

.popup-container {
	grid-column: 2;
	grid-row: 1;
}

.popup-toggle {
	cursor: pointer;
}

.popup {
	position: absolute;
	z-index: 3; /* Put it above everything else. */
	right: 0;
	background-color: var(--background-color);
	border: solid var(--border-width) var(--border-color);
}

.popup-toggle[aria-expanded="false"] ~ .popup {
	display: none;
}

.popup button {
	cursor: pointer;
	padding-top: var(--margin-unit);
	padding-bottom: var(--margin-unit);
}

.avatar {
	width: 60px;
	height: 60px;
	border-radius: 50%;
}

.empty-result {
	text-align: center;
}

.empty-result > p {
	margin: var(--margin-unit);
}

footer, footer a {
	color: var(--footer-color);
}

.social-icon {
	display: inline-block;
	fill: currentColor;
	width: var(--social-icon-length);
	height: var(--social-icon-length);
}

.error-log {
	position: sticky;
	bottom: 0;
	max-height: calc(100vh - 260px);
	min-height: 2em;
	overflow: scroll;
	background-color: red;
	color: white;
	font-family:
		'Helvetica Neue',
		'ヒラギノ角ゴ Pro W4',
		'Hiragino Kaku Gothic Pro',
		'メイリオ',
		'Meiryo',
		sans-serif;
}

.error-log > p {
	margin: var(--margin-unit);
}

.error-log a {
	color: #0FF;
}

.dismiss-error {
	float: right;
	border-radius: 5px;
	color: #000;
	background-color: #FFF;
}

@media(min-width: 480px) {
	:root {
		--drawer-width: 240px;
	}

	.hamburger-label.filter-active {
		background-color: var(--background-color);
	}

	.drawer-container {
		/* Use `initial` rather than `0` to prevent `transition` animation to trigger when shrinking
		 * the viewport width. */
		/* XXX: The animation of `.drawer-right` still triggers. */
		left: initial;
		/* Visually hide labels and the search input in `.drawer` by default. */
		width: calc(var(--hamburger-length) + var(--border-width));
		overflow-x: hidden;
		transition: width .3s;
	}

	.hamburger-checkbox:checked ~ .drawer-container,
	/* We want the drawer to open when the search input is focused, but using `:focus-within` here
	 * would cause the drawer to open when a feed filter button is clicked too.
	 * So we are using `.search-focused` class, which is set by Elm when the input is focused. */
	.search-focused ~ .drawer-container {
		/* Show the labels and input. */
		width: var(--drawer-width);
	}

	.drawer-right {
		margin-left: calc(var(--hamburger-length) + var(--border-width));
		border-left: solid var(--border-width) var(--border-color);
		transition: margin-left .3s;
	}

	.hamburger-checkbox:checked ~ .drawer-right, .search-focused ~ .drawer-right {
		margin-left: var(--drawer-width);
	}

	@media (prefers-reduced-motion) {
		/* TODO: Find a better animation. */
		.drawer-container {
			transition: none;
			/* Revert rules in the previous `@media (prefers-reduced-motion)`. */
			z-index: 2;
			opacity: 1;
		}

		.drawer-right {
			transition: none;
		}
	}

	.timeline {
		/* This is fine since overflow should only occur when the drawer is expanded. */
		overflow-x: hidden;
	}

	.event {
		vertical-align: top;
		margin: calc(2 * var(--margin-unit));
		border: solid var(--border-width) var(--border-color);
		width: var(--event-width);
	}

	.popup {
		/* TODO: Prevent the popup to shrink when the ellipsis is on far right of the viewport. */
		right: auto;
	}
}

